WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
100448
[BlackBerry] User Challenged again after browser restart for HTTP/FTP sites already successfully authenticated.
https://bugs.webkit.org/show_bug.cgi?id=100448
Summary
[BlackBerry] User Challenged again after browser restart for HTTP/FTP sites a...
Charles Wei
Reported
2012-10-25 20:19:46 PDT
Internal tracking: 231268 Some of the successfully authenticated sites with credentials saved will prompt the user for authentication again after browser reboot. one example is :
ftp://localhost
.
Attachments
Patch
(2.44 KB, patch)
2012-10-25 20:38 PDT
,
Charles Wei
no flags
Details
Formatted Diff
Diff
Patch
(2.45 KB, patch)
2012-10-25 20:49 PDT
,
Charles Wei
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Charles Wei
Comment 1
2012-10-25 20:38:55 PDT
Created
attachment 170797
[details]
Patch
Charles Wei
Comment 2
2012-10-25 20:40:04 PDT
Comment on
attachment 170797
[details]
Patch Commit it after reviewed.
WebKit Review Bot
Comment 3
2012-10-25 20:42:49 PDT
Comment on
attachment 170797
[details]
Patch Rejecting
attachment 170797
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 Joe Mason found in /mnt/git/webkit-commit-queue/Source/WebCore/ChangeLog does not appear to be a valid reviewer according to committers.py. ERROR: /mnt/git/webkit-commit-queue/Source/WebCore/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output:
http://queues.webkit.org/results/14555886
Charles Wei
Comment 4
2012-10-25 20:49:08 PDT
Created
attachment 170799
[details]
Patch
WebKit Review Bot
Comment 5
2012-10-25 21:45:11 PDT
Comment on
attachment 170799
[details]
Patch Clearing flags on attachment: 170799 Committed
r132569
: <
http://trac.webkit.org/changeset/132569
>
WebKit Review Bot
Comment 6
2012-10-25 21:45:15 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug