[BlackBerry] User Challenged again after browser restart for HTTP/FTP sites already successfully authenticated. https://bugs.webkit.org/show_bug.cgi?id=100448

Reviewed by George Staikos.

Internally reviewed by Joe Mason.

We didn't check the persistent Credential Storage for Credentials when challenged by the server.

Manual Test: login to ftp://localhost on BlackBerry device, and restart the browser to login again.

* platform/network/blackberry/NetworkJob.cpp:
(WebCore::NetworkJob::sendRequestWithCredentials):


Canonical link: https://commits.webkit.org/118480@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@132569 268f45cc-cd09-0410-ab3c-d52691b4dbfc